CNXContent-0.39
  - siyavula-phase-3 (11 Jan 2010)

CNXContent-0.38
  - removed adhoc branding (5 Jan 2010)

CNXContent-0.37
  - light-weight-branding (30 Oct 2009)
    - Adding styling to CNX look and Rhaptos look for branding bar and
      logo. Removed unused class from JS and converted another class into a
      more appropriate ID.

CNXContent-0.36
  - content-actions-move (17 Aug 2009)
    - CSS additions or changes for Content Actions dropdowns, Content Actions 
      in footer, "E-mail the author" links, prev/next links, book icon, order 
      button, <menclose> example
    - CSS for ratings stars generalized to allow multiple sets per page
    - Brought print.css up to date
    - CSS adjustments made for new doctypes, and moving of items 
      (including removal of obsolete CSS for old Content Actions placement)
    - one content_template now works for both Rhaptos and CNX: removed the redundant CNXContent version
    - #9318: Added "Order printed Collection" button 

CNXContent-0.35
  - Module Edit Workflow (30 Jun 2009)
    - #9094: Style adjustments to adjust for Ext's adjustments
  - #8067: Style improvements for warning messages
  
CNXContent-0.34
  - Siyavula release (May 14, 2009)
    - Removed endorsed.gif
    - Modified styling in metacontent.css
    - Added rate_label.png
    
CNXContent-0.33
  - changed default typeface and size of monospace text (#8633)
  - Put the OER icon, message, and links in the footer (ticket:8592)

CNXContent-0.32
  - Mathml warning message for unsupported browsers

CNXContent-0.31
  - cnxml-0.6-hot-fix, third roll-out (March 6, 2009)
    - Make default <emphasis> in IE appear non-italic bold (ticket:8326)
    - Fix problem related to <preformat> rendering messing up EIP (ticket:8262)

CNXContent-0.30
  - cnxml-0.6 (30 Jan 2009)
    - Added support for <title> where <name> used to be
    - Added or modified support for these elements
      - <label>
      - <list>
      - inline <note>
      - <span>