@@ -1,3 +1,5 @@
+  - New download setup, for epub and offlinezip
+
 CNXContent-0.39
   - siyavula-phase-3 (11 Jan 2010)
 
